fix (CSS): layout glitch on mobile after closing modal

--- a/css/style.css
+++ b/css/style.css
@@ -385,9 +385,9 @@ body > footer small {
 .cards {
 	overflow: hidden;
 	position: relative;
-	margin: 0 calc(-100vw / 2 + 100% / 2);
-	max-width: 100vw;
+	margin: 0 calc(-50vw + 50%);
 	height: 310px;
+	width: 100vw;
 }
 
 .cards .card:not(.current) {
